Tue Aug 24 16:40:51 CEST 2004 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/configure.js: added support for version extra

Mon Aug 23 16:53:02 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c libxslt/imports.c libxslt/xslt.c: fixing 
	  compilation problems on Solaris #150844

Sun Aug 22 17:19:49 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in NEWS doc/*: preparing release of 1.1.9

Sat Aug 21 22:08:14 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* transform.c: Further enhancement for keys on exslt:node-sets.
	  Corrects a rather serious timing problem (bug 150741)
	* tests/exslt/common/node-set.8.*: added regression test for this

Fri Aug 20 18:53:50 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* Makefile.am configure.in: a bit of cleanup and a extra variable for
	  CVS dist

Fri Aug 20 11:30:19 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/imports.c: fix a 64bit bug reported by Andreas Schwab

Wed Aug 18 14:27:18 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* configure.in libxslt/xsltconfig.h.in libxslt/xslt.c
	  libxslt/xsltwin32config.* libexslt/exsltconfig.h.in
	  libexslt/exslt.c: added some code to include the CVS
	  ChangeLog version in the version strings available for
	  printing (e.g. by xsltproc)

Wed Aug 18 00:22:00 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: implemented --nodtdattr to avoid defaulting
	  DTD attributes, RFE 150311 . Also cleanup the code from all
	  libxml2 pre 2.6.0 specific code since we are using 
	  LIBXML_REQUIRED_VERSION=2.6.8 in configure.in

Tue Aug 17 01:01:22 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/documents.c libxslt/documents.h libxslt/imports.c
	  libxslt/xslt.c libxslt/xsltutils.c: Implemented a hook to
	  provide document loading as suggested by David Hyatt for
	  Safari

Mon Aug 16 12:53:55 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: added a call to xmlXPathOrderDocElems