@@ -160,6 +160,7 @@ EXTRA_DIST = \
     bug-150.out bug-150.xsl \
     bug-151.out bug-151.xsl \
     bug-152.out bug-152.xsl \
+    bug-153.out bug-153.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
