@@ -1,3 +1,11 @@
+Fri Aug 27 20:52:52 PDT 2004 William Brack <wbrack@mmm.com.hk>
+
+	* libxslt/keys.c: fixed small problem with key initialisation
+	  disturbing the transformation context (bug 151201).
+	* tests/general/bug-153.*, tests/general/Makefile.am,
+	  tests/docs/bug-153*, tests/docs/Makefile.am: added test case
+	  for above
+
 Tue Aug 24 16:40:51 CEST 2004 Igor Zlatkovic <igor@zlatkovic.com>
 
 	* win32/configure.js: added support for version extra
